@@ -34,6 +34,8 @@ import org.labkey.api.assay.plate.PlateCustomField;
 import org.labkey.api.assay.plate.PlateLayoutHandler;
 import org.labkey.api.assay.plate.PlateService;
 import org.labkey.api.assay.plate.PlateSet;
+import org.labkey.api.assay.plate.PlateSetEdge;
+import org.labkey.api.assay.plate.PlateSetType;
 import org.labkey.api.assay.plate.PlateType;
 import org.labkey.api.assay.plate.PlateUtils;
 import org.labkey.api.assay.plate.Position;
@@ -50,6 +52,8 @@ import org.labkey.api.data.ContainerManager;
 import org.labkey.api.data.DbScope;
 import org.labkey.api.data.ImportAliasable;
 import org.labkey.api.data.ObjectFactory;
+import org.labkey.api.data.Results;
+import org.labkey.api.data.RuntimeSQLException;
 import org.labkey.api.data.SQLFragment;
 import org.labkey.api.data.SimpleFilter;
 import org.labkey.api.data.Sort;
@@ -58,6 +62,7 @@ import org.labkey.api.data.SqlSelector;
 import org.labkey.api.data.Table;
 import org.labkey.api.data.TableInfo;
 import org.labkey.api.data.TableSelector;
+import org.labkey.api.data.dialect.SqlDialect;
 import org.labkey.api.data.statistics.FitFailedException;
 import org.labkey.api.data.statistics.StatsService;
 import org.labkey.api.exp.Lsid;
@@ -94,11 +99,14 @@ import org.labkey.api.util.GUID;
 import org.labkey.api.util.JunitUtil;
 import org.labkey.api.util.Pair;
 import org.labkey.api.util.TestContext;
+import org.labkey.api.util.UnexpectedException;
 import org.labkey.api.view.ActionURL;
+import org.labkey.api.view.NotFoundException;
 import org.labkey.api.view.UnauthorizedException;
 import org.labkey.api.webdav.WebdavResource;
 import org.labkey.assay.TsvAssayProvider;
 import org.labkey.assay.plate.model.PlateBean;
+import org.labkey.assay.plate.model.PlateSetLineage;
 import org.labkey.assay.plate.model.PlateTypeBean;
 import org.labkey.assay.plate.model.WellBean;
 import org.labkey.assay.plate.model.WellGroupBean;
@@ -845,7 +853,7 @@ public class PlateManager implements PlateService
             if (!updateExisting && plate.getPlateSet() == null)
             {
                 // ensure a plate set for each new plate
-                plate.setPlateSet(ensureDefaultPlateSet(container, user));
+                plate.setPlateSet(createPlateSet(container, user, new PlateSetImpl(), null, null));
             }
             Map<String, Object> plateRow = ObjectFactory.Registry.getFactory(PlateBean.class).toMap(PlateBean.from(plate), new ArrayListMap<>());
             QueryUpdateService qus = getPlateUpdateService(container, user);
@@ -853,11 +861,6 @@ public class PlateManager implements PlateService
 
             if (updateExisting)
             {
-                // special case if the plate name changes, we want to remove the cache key with the old name
-                Plate oldPlate = getPlate(container, plateId);
-                if (!oldPlate.getName().equals(plate.getName()))
-                    clearCache(container, oldPlate);
-
                 qus.updateRows(user, container, Collections.singletonList(plateRow), null, errors, null, null);
                 if (errors.hasErrors())
                     throw errors;
@@ -873,7 +876,7 @@ public class PlateManager implements PlateService
                 plate.setLsid((String) row.get("Lsid"));
                 plate.setPlateId((String) row.get("PlateId"));
             }
-            savePropertyBag(container, plate.getLSID(), plate.getProperties(), updateExisting);
+            savePropertyBag(container, user, plate.getLSID(), plate.getProperties(), updateExisting);
 
             // delete well groups first
             List<WellGroupImpl> deletedWellGroups = plate.getDeletedWellGroups();
@@ -901,7 +904,7 @@ public class PlateManager implements PlateService
                     if (wellGroupErrors.hasErrors())
                         throw wellGroupErrors;
 
-                    savePropertyBag(container, wellGroupInstanceLsid, wellgroup.getProperties(), true);
+                    savePropertyBag(container, user, wellGroupInstanceLsid, wellgroup.getProperties(), true);
                 }
                 else
                 {
@@ -914,69 +917,62 @@ public class PlateManager implements PlateService
 
                     wellGroupInstanceLsid = (String)insertedRows.get(0).get("Lsid");
                     wellgroup = ObjectFactory.Registry.getFactory(WellGroupImpl.class).fromMap(wellgroup, insertedRows.get(0));
-                    savePropertyBag(container, wellGroupInstanceLsid, wellgroup.getProperties(), false);
+                    savePropertyBag(container, user, wellGroupInstanceLsid, wellgroup.getProperties(), false);
                 }
             }
-
-            // Get existing wells for the plate
-            Map<Pair<Integer, Integer>, PositionImpl> existingPositionMap = new HashMap<>();
-            if (updateExisting)
-            {
-                for (Well existingPosition : plate.getWells())
-                {
-                    existingPositionMap.put(Pair.of(existingPosition.getRow(), existingPosition.getColumn()), (PositionImpl) existingPosition);
-                }
-            }
-
             List<List<Integer>> wellGroupPositions = new LinkedList<>();
-            QueryUpdateService wellQus = getWellUpdateService(container, user);
-            for (int row = 0; row < plate.getRows(); row++)
-            {
-                for (int col = 0; col < plate.getColumns(); col++)
-                {
-                    PositionImpl position;
-                    if (updateExisting)
-                    {
-                        position = existingPositionMap.get(Pair.of(row, col));
-                        assert position != null;
-                        assert position.getRowId() != null && position.getRowId() > 0;
-                        assert position.getLsid() != null;
+            List<Map<String, Object>> insertedRows = Collections.emptyList();
 
-                        Lsid lsid = Lsid.parse(position.getLsid());
-                        String objectId = lsid.getObjectId();
-                        assert objectId.endsWith("-well-" + row + "-" + col);
-                    }
-                    else
+            // create new wells for this plate
+            ObjectFactory<PositionImpl> factory = ObjectFactory.Registry.getFactory(PositionImpl.class);
+            if (!updateExisting)
+            {
+                QueryUpdateService wellQus = getWellUpdateService(container, user);
+                List<Map<String, Object>> wellRows = new ArrayList<>();
+                for (int row = 0; row < plate.getRows(); row++)
+                {
+                    for (int col = 0; col < plate.getColumns(); col++)
                     {
+                        PositionImpl position;
                         position = plate.getPosition(row, col);
-                        assert position.getRowId() == null || position.getRowId() == 0;
+                        if (position.getRowId() != null)
+                            throw new IllegalStateException("Attempting to create a new plate but there are existing wells associated with it.");
 
                         position.setPlateId(plateId);
-                        Map<String, Object> wellRow = ObjectFactory.Registry.getFactory(PositionImpl.class).toMap(position, new ArrayListMap<>());
-                        BatchValidationException wellErrors = new BatchValidationException();
-
-                        List<Map<String, Object>> insertedRows = wellQus.insertRows(user, container, Collections.singletonList(wellRow), wellErrors, null, null);
-                        if (wellErrors.hasErrors())
-                            throw wellErrors;
-
-                        position = ObjectFactory.Registry.getFactory(PositionImpl.class).fromMap(position, insertedRows.get(0));
+                        wellRows.add(factory.toMap(position, new ArrayListMap<>()));
                     }
-
-                    // collect well group positions to save
-                    wellGroupPositions.addAll(getWellGroupPositions(plate, position));
                 }
+                BatchValidationException wellErrors = new BatchValidationException();
+                insertedRows = wellQus.insertRows(user, container, wellRows, wellErrors, null, null);
+                if (wellErrors.hasErrors())
+                    throw wellErrors;
             }
 
-            // delete all existing well group positions for the plate
-            if (updateExisting)
+            // insert/update well to well group mappings
+            if (!plate.getWellGroups().isEmpty())
             {
-                deleteWellGroupPositions(plate);
-            }
+                if (updateExisting)
+                {
+                    for (Well well : plate.getWells())
+                        wellGroupPositions.addAll(getWellGroupPositions(plate, well));
 
-            // save well group positions
-            String insertSql = "INSERT INTO " + AssayDbSchema.getInstance().getTableInfoWellGroupPositions() +
-                    " (wellId, wellGroupId) VALUES (?, ?)";
-            Table.batchExecute(AssayDbSchema.getInstance().getSchema(), insertSql, wellGroupPositions);
+                    // delete all existing well group positions
+                    deleteWellGroupPositions(plate);
+                }
+                else
+                {
+                    for (Map<String, Object> row : insertedRows)
+                    {
+                        PositionImpl position = factory.fromMap(row);
+                        wellGroupPositions.addAll(getWellGroupPositions(plate, position));
+                    }
+                }
+
+                // save well to well group positions
+                String insertSql = "INSERT INTO " + AssayDbSchema.getInstance().getTableInfoWellGroupPositions() +
+                        " (wellId, wellGroupId) VALUES (?, ?)";
+                Table.batchExecute(AssayDbSchema.getInstance().getSchema(), insertSql, wellGroupPositions);
+            }
 
             final Integer plateRowId = plateId;
             transaction.addCommitTask(() -> {
@@ -989,25 +985,8 @@ public class PlateManager implements PlateService
         }
     }
 
-    // creates a default plate set in the specified container and returns its ID
-    private PlateSet ensureDefaultPlateSet(Container container, User user) throws Exception
-    {
-        BatchValidationException errors = new BatchValidationException();
-        QueryUpdateService qus = getPlateSetUpdateService(container, user);
-        PlateSetImpl plateSet = new PlateSetImpl();
-        plateSet.beforeInsert(user, container.getId());
-        Map<String, Object> plateSetRow = ObjectFactory.Registry.getFactory(PlateSetImpl.class).toMap(plateSet, new ArrayListMap<>());
-
-        List<Map<String, Object>> insertedRows = qus.insertRows(user, container, Collections.singletonList(plateSetRow), errors, null, null);
-        if (errors.hasErrors())
-            throw errors;
-
-        Integer rowId = (Integer)insertedRows.get(0).get("RowId");
-        return getPlateSet(container, rowId);
-    }
-
     // return a list of wellId and wellGroupId pairs
-    private List<List<Integer>> getWellGroupPositions(Plate plate, PositionImpl position)
+    private List<List<Integer>> getWellGroupPositions(Plate plate, Position position)
     {
         List<WellGroup> groups = plate.getWellGroups(position);
         List<List<Integer>> wellGroupPositions = new ArrayList<>(groups.size());
@@ -1016,8 +995,10 @@ public class PlateManager implements PlateService
         {
             if (group.contains(position))
             {
-                assert position.getRowId() > 0;
-                assert group.getRowId() != null && group.getRowId() > 0;
+                if (position.getRowId() == null)
+                    throw new IllegalArgumentException("The specified well has not been saved to the database.");
+                if (group.getRowId() == null)
+                    throw new IllegalStateException("The well group : " + group.getName() + " has not been saved to the database.");
                 Integer wellId = position.getRowId();
                 Integer wellGroupId = group.getRowId();
                 wellGroupPositions.add(List.of(wellId, wellGroupId));
@@ -1027,7 +1008,13 @@ public class PlateManager implements PlateService
         return wellGroupPositions;
     }
 
-    private void savePropertyBag(Container container, String ownerLsid, Map<String, Object> props, boolean updateExisting) throws SQLException
+    private void savePropertyBag(
+        Container container,
+        User user,
+        String ownerLsid,
+        Map<String, Object> props,
+        boolean updateExisting
+    ) throws SQLException
     {
         // construct the LSID to associate with the property objects
         String classLsid = Lsid.parse(ownerLsid).edit().setObjectId(LSID_CLASS_OBJECT_ID).toString();
@@ -1062,7 +1049,7 @@ public class PlateManager implements PlateService
         try
         {
             if (objectProperties.length > 0)
-                OntologyManager.insertProperties(container, ownerLsid, objectProperties);
+                OntologyManager.insertProperties(container, user, ownerLsid, objectProperties);
         }
         catch (ValidationException ve)
         {
@@ -1088,18 +1075,13 @@ public class PlateManager implements PlateService
     // Called by the Plate Query Update Service prior to deleting a plate
     public void beforePlateDelete(Container container, Integer plateId)
     {
-        final AssayDbSchema schema = AssayDbSchema.getInstance();
-        DbScope scope = schema.getSchema().getScope();
-        if (!scope.isTransactionActive())
-            throw new IllegalStateException("This method must be called from within a transaction");
+        requireActiveTransaction();
 
         Plate plate = PlateCache.getPlate(container, plateId);
         List<String> lsids = new ArrayList<>();
         lsids.add(plate.getLSID());
         for (WellGroup wellgroup : plate.getWellGroups())
             lsids.add(wellgroup.getLSID());
-        for (Well well : plate.getWells())
-            lsids.add(well.getLsid());
 
         SimpleFilter plateIdFilter = SimpleFilter.createContainerFilter(container);
         plateIdFilter.addCondition(FieldKey.fromParts("PlateId"), plate.getRowId());
@@ -1108,11 +1090,12 @@ public class PlateManager implements PlateService
         deleteWellGroupPositions(plate);
 
         // delete PlateProperty mappings
+        AssayDbSchema schema = AssayDbSchema.getInstance();
         SQLFragment sql = new SQLFragment("DELETE FROM ")
-                .append(AssayDbSchema.getInstance().getTableInfoPlateProperty(), "")
+                .append(schema.getTableInfoPlateProperty(), "")
                 .append(" WHERE PlateId = ?")
                 .add(plateId);
-        new SqlExecutor(AssayDbSchema.getInstance().getSchema()).execute(sql);
+        new SqlExecutor(schema.getSchema()).execute(sql);
 
         // delete any plate metadata values from the provisioned table
         TableInfo provisionedTable = getPlateMetadataTable(container, User.getAdminServiceUser());
@@ -1123,11 +1106,41 @@ public class PlateManager implements PlateService
                     .append(" SELECT Lsid FROM ").append(AssayDbSchema.getInstance().getTableInfoWell(), "")
                     .append(" WHERE PlateId = ?)")
                     .add(plateId);
-            new SqlExecutor(AssayDbSchema.getInstance().getSchema()).execute(sql2);
+            new SqlExecutor(schema.getSchema()).execute(sql2);
         }
 
         Table.delete(schema.getTableInfoWell(), plateIdFilter);
         Table.delete(schema.getTableInfoWellGroup(), plateIdFilter);
+    }
+
+    public void beforePlateSetDelete(Container container, User user, Integer rowId)
+    {
+        beforePlateSetsDelete(List.of(rowId));
+    }
+
+    private void beforePlateSetsDelete(Collection<Integer> plateSetIds)
+    {
+        requireActiveTransaction();
+
+        if (plateSetIds.isEmpty())
+            return;
+
+        final AssayDbSchema schema = AssayDbSchema.getInstance();
+        final SqlDialect sqlDialect = schema.getSchema().getSqlDialect();
+
+        SQLFragment edgeSql = new SQLFragment("DELETE FROM ").append(schema.getTableInfoPlateSetEdge())
+                .append(" WHERE FromPlateSetId ").appendInClause(plateSetIds, sqlDialect)
+                .append(" OR ToPlateSetId ").appendInClause(plateSetIds, sqlDialect)
+                .append(" OR RootPlateSetId ").appendInClause(plateSetIds, sqlDialect);
+        new SqlExecutor(schema.getSchema()).execute(edgeSql);
+
+        SQLFragment primaryPlateSetSql = new SQLFragment("UPDATE ").append(schema.getTableInfoPlateSet())
+                .append(" SET PrimaryPlateSetId = NULL WHERE PrimaryPlateSetId ").appendInClause(plateSetIds, sqlDialect);
+        new SqlExecutor(schema.getSchema()).execute(primaryPlateSetSql);
+
+        SQLFragment rootPlateSetSql = new SQLFragment("UPDATE ").append(schema.getTableInfoPlateSet())
+                .append(" SET RootPlateSetId = NULL WHERE RootPlateSetId ").appendInClause(plateSetIds, sqlDialect);
+        new SqlExecutor(schema.getSchema()).execute(rootPlateSetSql);
     }
 
     private void deleteWellGroup(Container container, User user, int wellGroupId) throws Exception
@@ -1167,43 +1180,62 @@ public class PlateManager implements PlateService
     @Override
     public void deleteAllPlateData(Container container)
     {
-        final AssayDbSchema schema = AssayDbSchema.getInstance();
-        new SqlExecutor(schema.getScope()).execute("" +
-                "DELETE FROM " + schema.getTableInfoWellGroupPositions() + " WHERE wellId IN " +
-                "(SELECT rowId FROM " + schema.getTableInfoWell() + " WHERE container=?)", container.getId());
-
-        // delete PlateProperty mappings
-        SQLFragment sql = new SQLFragment("DELETE FROM ")
-                .append(AssayDbSchema.getInstance().getTableInfoPlateProperty(), "")
-                .append(" WHERE PlateId IN (SELECT RowId FROM ").append(AssayDbSchema.getInstance().getTableInfoPlate(), "AP")
-                .append(" WHERE Container = ? )")
-                .add(container);
-        new SqlExecutor(AssayDbSchema.getInstance().getSchema()).execute(sql);
-
-        // delete any plate metadata values from the provisioned table
-        TableInfo provisionedTable = getPlateMetadataTable(container, User.getAdminServiceUser());
-        if (provisionedTable != null)
+        try (DbScope.Transaction tx = ensureTransaction())
         {
-            SQLFragment sql2 = new SQLFragment("DELETE FROM ").append(provisionedTable, "")
-                    .append(" WHERE Lsid IN (")
-                    .append(" SELECT Lsid FROM ").append(AssayDbSchema.getInstance().getTableInfoWell(), "")
-                    .append(" WHERE Container = ?)")
-                    .add(container);
-            new SqlExecutor(AssayDbSchema.getInstance().getSchema()).execute(sql2);
+            final AssayDbSchema schema = AssayDbSchema.getInstance();
+            // delete well group positions
+            {
+                SQLFragment sql = new SQLFragment("DELETE FROM ").append(schema.getTableInfoWellGroupPositions())
+                        .append(" WHERE wellId IN (SELECT rowId FROM ").append(schema.getTableInfoWell())
+                        .append(" WHERE container = ?)").add(container);
+                new SqlExecutor(schema.getSchema()).execute(sql);
+            }
+
+            // delete PlateProperty mappings
+            {
+                SQLFragment sql = new SQLFragment("DELETE FROM ")
+                        .append(schema.getTableInfoPlateProperty(), "")
+                        .append(" WHERE PlateId IN (SELECT RowId FROM ").append(schema.getTableInfoPlate())
+                        .append(" WHERE Container = ?)").add(container);
+                new SqlExecutor(schema.getSchema()).execute(sql);
+            }
+
+            // delete plate metadata values from the provisioned table
+            TableInfo provisionedTable = getPlateMetadataTable(container, User.getAdminServiceUser());
+            if (provisionedTable != null)
+            {
+                SQLFragment sql = new SQLFragment("DELETE FROM ").append(provisionedTable)
+                        .append(" WHERE Lsid IN (")
+                        .append(" SELECT Lsid FROM ").append(schema.getTableInfoWell())
+                        .append(" WHERE Container = ?)").add(container);
+                new SqlExecutor(schema.getSchema()).execute(sql);
+            }
+
+            SimpleFilter filter = SimpleFilter.createContainerFilter(container);
+            Table.delete(schema.getTableInfoWell(), filter);
+            Table.delete(schema.getTableInfoWellGroup(), filter);
+            Table.delete(schema.getTableInfoPlate(), filter);
+
+            // delete empty plate sets in this container
+            {
+                SQLFragment emptyPlateSetsSql = new SQLFragment("SELECT RowId FROM ").append(schema.getTableInfoPlateSet())
+                        .append(" WHERE RowId NOT IN (SELECT DISTINCT PlateSet FROM ").append(schema.getTableInfoPlate()).append(")")
+                        .append(" AND Container = ?").add(container);
+
+                ArrayList<Integer> emptyPlateSetIds = new SqlSelector(schema.getSchema(), emptyPlateSetsSql).getArrayList(Integer.class);
+
+                if (!emptyPlateSetIds.isEmpty())
+                {
+                    beforePlateSetsDelete(emptyPlateSetIds);
+
+                    SQLFragment sql = new SQLFragment("DELETE FROM ").append(schema.getTableInfoPlateSet())
+                            .append(" WHERE RowId ").appendInClause(emptyPlateSetIds, schema.getSchema().getSqlDialect());
+                    new SqlExecutor(schema.getSchema()).execute(sql);
+                }
+            }
+
+            tx.commit();
         }
-
-        SimpleFilter filter = SimpleFilter.createContainerFilter(container);
-        Table.delete(schema.getTableInfoWell(), filter);
-        Table.delete(schema.getTableInfoWellGroup(), filter);
-        Table.delete(schema.getTableInfoPlate(), filter);
-
-        // delete all empty plate sets in this container
-        SQLFragment sql3 = new SQLFragment("DELETE FROM ")
-                .append(AssayDbSchema.getInstance().getTableInfoPlateSet(), "")
-                .append(" WHERE RowId NOT IN (SELECT DISTINCT PlateSet FROM ").append(AssayDbSchema.getInstance().getTableInfoPlate(), "").append(")")
-                .append(" AND Container = ?")
-                .add(container);
-        new SqlExecutor(AssayDbSchema.getInstance().getSchema()).execute(sql3);
 
         clearCache(container);
     }
@@ -1252,7 +1284,7 @@ public class PlateManager implements PlateService
     private @NotNull QueryUpdateService getPlateUpdateService(Container container, User user)
     {
         UserSchema schema = getPlateUserSchema(container, user);
-        TableInfo tableInfo = schema.getTable(PlateTable.NAME);
+        TableInfo tableInfo = schema.getTableOrThrow(PlateTable.NAME);
         QueryUpdateService qus = tableInfo.getUpdateService();
         if (qus == null)
             throw new IllegalStateException("Unable to resolve QueryUpdateService for Plates.");
@@ -1263,7 +1295,7 @@ public class PlateManager implements PlateService
     private @NotNull QueryUpdateService getPlateSetUpdateService(Container container, User user)
     {
         UserSchema schema = getPlateUserSchema(container, user);
-        TableInfo tableInfo = schema.getTable(PlateSetTable.NAME);
+        TableInfo tableInfo = schema.getTableOrThrow(PlateSetTable.NAME);
         QueryUpdateService qus = tableInfo.getUpdateService();
         if (qus == null)
             throw new IllegalStateException("Unable to resolve QueryUpdateService for PlateSets.");
@@ -1274,7 +1306,7 @@ public class PlateManager implements PlateService
     private @NotNull QueryUpdateService getWellGroupUpdateService(Container container, User user)
     {
         UserSchema schema = getPlateUserSchema(container, user);
-        TableInfo tableInfo = schema.getTable(WellGroupTable.NAME);
+        TableInfo tableInfo = schema.getTableOrThrow(WellGroupTable.NAME);
         QueryUpdateService qus = tableInfo.getUpdateService();
         if (qus == null)
             throw new IllegalStateException("Unable to resolve QueryUpdateService for Well Groups.");
@@ -1282,10 +1314,10 @@ public class PlateManager implements PlateService
         return qus;
     }
 
-    private TableInfo getWellTable(Container container, User user)
+    private @NotNull TableInfo getWellTable(Container container, User user)
     {
         UserSchema schema = getPlateUserSchema(container, user);
-        return schema.getTable(WellTable.NAME);
+        return schema.getTableOrThrow(WellTable.NAME);
     }
 
     private @NotNull QueryUpdateService getWellUpdateService(Container container, User user)
@@ -1737,7 +1769,7 @@ public class PlateManager implements PlateService
         if (plateId == null)
             throw new IllegalArgumentException("Failed to add plate custom fields. Invalid plateId provided.");
 
-        if (fields == null || fields.size() == 0)
+        if (fields == null || fields.isEmpty())
             throw new IllegalArgumentException("Failed to add plate custom fields. No fields specified.");
 
         Plate plate = requirePlate(container, plateId, "Failed to add plate custom fields.");
@@ -1816,7 +1848,7 @@ public class PlateManager implements PlateService
         return fields;
     }
 
-    public List<WellCustomField> getWellCustomFields(User user, Plate plate, Integer wellId)
+    public @NotNull List<WellCustomField> getWellCustomFields(User user, Plate plate, Integer wellId)
     {
         Well well = plate.getWell(wellId);
         if (well == null)
@@ -1824,14 +1856,34 @@ public class PlateManager implements PlateService
 
         List<WellCustomField> fields = _getFields(plate.getContainer(), user, plate.getRowId()).stream().map(WellCustomField::new).toList();
 
-        // need to get the well values associated with each custom field
-        Map<String, Object> properties = OntologyManager.getProperties(plate.getContainer(), well.getLsid());
-        for (WellCustomField field : fields)
-            field.setValue(properties.get(field.getPropertyURI()));
+        // merge in any well metadata values
+        if (!fields.isEmpty())
+        {
+            Map<FieldKey, WellCustomField> customFieldMap = new HashMap<>();
+            for (WellCustomField customField : fields)
+                customFieldMap.put(FieldKey.fromParts("properties", customField.getName()), customField);
+            SimpleFilter filter = new SimpleFilter(FieldKey.fromParts("rowId"), wellId);
 
-        return fields.stream()
-                .sorted(Comparator.comparing(PlateCustomField::getName))
-                .collect(Collectors.toList());
+            TableInfo wellTable = getWellTable(plate.getContainer(), user);
+            Map<FieldKey, ColumnInfo> columnMap = QueryService.get().getColumns(wellTable, customFieldMap.keySet());
+            try (Results r = QueryService.get().select(wellTable, columnMap.values(), filter, null))
+            {
+                while (r.next())
+                {
+                    for (Map.Entry<FieldKey, Object> rowEntry : r.getFieldKeyRowMap().entrySet())
+                    {
+                        if (customFieldMap.containsKey(rowEntry.getKey()))
+                            customFieldMap.get(rowEntry.getKey()).setValue(rowEntry.getValue());
+                    }
+                }
+            }
+            catch (SQLException e)
+            {
+                throw UnexpectedException.wrap(e);
+            }
+        }
+
+        return fields.stream().sorted(Comparator.comparing(PlateCustomField::getName)).toList();
     }
 
     public List<PlateCustomField> removeFields(Container container, User user, Integer plateId, List<PlateCustomField> fields)
@@ -1857,7 +1909,7 @@ public class PlateManager implements PlateService
         {
             try (DbScope.Transaction transaction = ExperimentService.get().ensureTransaction())
             {
-                List<String> propertyURIs = fieldsToRemove.stream().map(DomainProperty::getPropertyURI).collect(Collectors.toList());
+                List<String> propertyURIs = fieldsToRemove.stream().map(DomainProperty::getPropertyURI).toList();
                 Set<String> existingProps = plate.getCustomFields().stream().map(PlateCustomField::getPropertyURI).collect(Collectors.toSet());
                 for (DomainProperty dp : fieldsToRemove)
                 {
@@ -1939,7 +1991,13 @@ public class PlateManager implements PlateService
 
     public record CreatePlateSetPlate(String name, Integer plateType) {}
 
-    public PlateSetImpl createPlateSet(Container container, User user, @NotNull PlateSetImpl plateSet, @Nullable List<CreatePlateSetPlate> plates) throws Exception
+    public PlateSetImpl createPlateSet(
+        Container container,
+        User user,
+        @NotNull PlateSetImpl plateSet,
+        @Nullable List<CreatePlateSetPlate> plates,
+        @Nullable Integer parentPlateSetId
+    ) throws Exception
     {
         if (!container.hasPermission(user, InsertPermission.class))
             throw new UnauthorizedException("Failed to create plate set. Insufficient permissions.");
@@ -1949,6 +2007,19 @@ public class PlateManager implements PlateService
 
         if (plates != null && plates.size() > MAX_PLATES)
             throw new ValidationException(String.format("Failed to create plate set. Plate sets can have a maximum of %d plates.", MAX_PLATES));
+
+        PlateSetImpl parentPlateSet = null;
+        if (parentPlateSetId != null)
+        {
+            parentPlateSet = (PlateSetImpl) getPlateSet(container, parentPlateSetId);
+            if (parentPlateSet == null)
+                throw new ValidationException(String.format("Failed to create plate set. Parent plate set with rowId (%d) is not available.", parentPlateSetId));
+            if (parentPlateSet.getRootPlateSetId() == null)
+                throw new ValidationException(String.format("Failed to create plate set. Parent plate set with rowId (%d) does not have a root plate set specified.", parentPlateSetId));
+        }
+
+        if (plateSet.getType() == null)
+            plateSet.setType(PlateSetType.assay);
 
         try (DbScope.Transaction tx = ensureTransaction())
         {
@@ -1961,6 +2032,8 @@ public class PlateManager implements PlateService
                 throw errors;
 
             Integer plateSetId = (Integer) rows.get(0).get("RowId");
+
+            savePlateSetHeritage(plateSetId, plateSet.getType(), parentPlateSet);
 
             if (plates != null)
             {
@@ -1980,6 +2053,44 @@ public class PlateManager implements PlateService
         }
 
         return plateSet;
+    }
+
+    private void savePlateSetHeritage(Integer plateSetId, PlateSetType plateSetType, @Nullable PlateSetImpl parentPlateSet)
+    {
+        requireActiveTransaction();
+
+        // Configure rootPlateSetId
+        Integer rootPlateSetId = null;
+        if (PlateSetType.primary.equals(plateSetType))
+            rootPlateSetId = parentPlateSet == null ? plateSetId : parentPlateSet.getRootPlateSetId();
+        else if (PlateSetType.assay.equals(plateSetType))
+            rootPlateSetId = parentPlateSet == null ? null : parentPlateSet.getRootPlateSetId();
+
+        // Configure primaryPlateSetId
+        Integer primaryPlateSetId = null;
+        if (parentPlateSet != null)
+        {
+            if (PlateSetType.primary.equals(parentPlateSet.getType()))
+                primaryPlateSetId = parentPlateSet.getRowId();
+            else if (PlateSetType.assay.equals(parentPlateSet.getType()))
+                primaryPlateSetId = parentPlateSet.getPrimaryPlateSetId(); // could be null
+        }
+
+        // Add lineage edge relating parent to this plate set
+        if (parentPlateSet != null)
+            addPlateSetEdges(List.of(new PlateSetEdge(parentPlateSet.getRowId(), plateSetId, parentPlateSet.getRootPlateSetId())));
+
+        if (rootPlateSetId != null || primaryPlateSetId != null)
+        {
+            SQLFragment sql = new SQLFragment("UPDATE ").append(AssayDbSchema.getInstance().getTableInfoPlateSet()).append(" SET ");
+            if (rootPlateSetId != null)
+                sql = sql.append("RootPlateSetId = ?").add(rootPlateSetId);
+            if (primaryPlateSetId != null)
+                sql = sql.append(rootPlateSetId != null ? ", " : "").append("PrimaryPlateSetId = ?").add(primaryPlateSetId);
+            sql = sql.append(" WHERE RowId = ?").add(plateSetId);
+
+            new SqlExecutor(AssayDbSchema.getInstance().getSchema()).execute(sql);
+        }
     }
 
     public void archivePlateSets(Container container, User user, List<Integer> plateSetIds, boolean archive) throws Exception
@@ -2012,7 +2123,7 @@ public class PlateManager implements PlateService
                 }
             }
 
-            SQLFragment sql = new SQLFragment("UPDATE ").append(plateSetTable, "PS")
+            SQLFragment sql = new SQLFragment("UPDATE ").append(plateSetTable)
                     .append(" SET archived = ?").add(archive)
                     .append(" WHERE rowId ").appendInClause(plateSetIds, plateSetTable.getSqlDialect());
 
@@ -2020,6 +2131,97 @@ public class PlateManager implements PlateService
 
             tx.commit();
         }
+    }
+
+    private void addPlateSetEdges(Collection<PlateSetEdge> edges)
+    {
+        if (edges == null || edges.isEmpty())
+            return;
+
+        List<List<?>> params = new ArrayList<>();
+
+        for (var edge : edges)
+        {
+            // ignore cycles from and to itself
+            if (Objects.equals(edge.getFromPlateSetId(), edge.getToPlateSetId()))
+                continue;
+
+            params.add(Arrays.asList(
+                edge.getFromPlateSetId(),
+                edge.getToPlateSetId(),
+                edge.getRootPlateSetId()
+            ));
+        }
+
+        if (params.isEmpty())
+            return;
+
+        try (DbScope.Transaction tx = ensureTransaction())
+        {
+            String sql = "INSERT INTO " + AssayDbSchema.getInstance().getTableInfoPlateSetEdge() +
+                    " (fromPlateSetId, toPlateSetId, rootPlateSetId) " +
+                    " VALUES (?, ?, ?) ";
+
+            Table.batchExecute(AssayDbSchema.getInstance().getSchema(), sql, params);
+            tx.commit();
+        }
+        catch (SQLException e)
+        {
+            throw new RuntimeSQLException(e);
+        }
+    }
+
+    public PlateSetLineage getPlateSetLineage(Container container, User user, int seedPlateSetId, @Nullable ContainerFilter cf)
+    {
+        ContainerFilter cf_ = cf;
+        if (cf_ == null)
+            cf_ = QueryService.get().getProductContainerFilterForLookups(container, user, ContainerFilter.Type.Current.create(container, user));
+
+        PlateSetImpl seedPlateSet = (PlateSetImpl) getPlateSet(cf_, seedPlateSetId);
+        if (seedPlateSet == null)
+            throw new NotFoundException();
+
+        PlateSetLineage lineage = new PlateSetLineage();
+        lineage.setSeed(seedPlateSetId);
+
+        // stand-alone plate set
+        if (seedPlateSet.getRootPlateSetId() == null)
+        {
+            lineage.setPlateSets(Map.of(seedPlateSetId, seedPlateSet));
+            return lineage;
+        }
+
+        SimpleFilter filter = new SimpleFilter(FieldKey.fromParts("RootPlateSetId"), seedPlateSet.getRootPlateSetId());
+        List<PlateSetEdge> edges = new TableSelector(AssayDbSchema.getInstance().getTableInfoPlateSetEdge(), filter, null).getArrayList(PlateSetEdge.class);
+        lineage.setEdges(edges);
+
+        Set<Integer> nodeIds = new HashSet<>();
+        nodeIds.add(seedPlateSetId);
+        nodeIds.add(seedPlateSet.getRootPlateSetId());
+        for (var edge : edges)
+        {
+            nodeIds.add(edge.getFromPlateSetId());
+            nodeIds.add(edge.getToPlateSetId());
+        }
+
+        UserSchema schema = getPlateUserSchema(container, user);
+        TableInfo plateSetTable = schema.getTableOrThrow(PlateSetTable.NAME, cf_);
+        SimpleFilter filterPS = new SimpleFilter();
+        filterPS.addInClause(FieldKey.fromParts("RowId"), nodeIds);
+        List<PlateSetImpl> nodes = new TableSelector(plateSetTable, filterPS, null).getArrayList(PlateSetImpl.class);
+
+        Map<Integer, PlateSet> plateSets = new HashMap<>();
+        for (var node : nodes)
+            plateSets.put(node.getRowId(), node);
+        lineage.setPlateSets(plateSets);
+
+        return lineage;
+    }
+
+    private void requireActiveTransaction()
+    {
+        if (!AssayDbSchema.getInstance().getSchema().getScope().isTransactionActive())
+            throw new IllegalStateException("This method must be called from within a transaction");
     }
 
     public static final class TestCase
@@ -2212,10 +2414,10 @@ public class PlateManager implements PlateService
 
             // Act
             PlateSet plateSet = PlateManager.get().createPlateSet(container, user, plateSetImpl, List.of(
-                    new CreatePlateSetPlate("testAccessPlateByIdentifiersFirst", plateType.getRowId()),
-                    new CreatePlateSetPlate("testAccessPlateByIdentifiersSecond", plateType.getRowId()),
-                    new CreatePlateSetPlate("testAccessPlateByIdentifiersThird", plateType.getRowId())
-            ));
+                new CreatePlateSetPlate("testAccessPlateByIdentifiersFirst", plateType.getRowId()),
+                new CreatePlateSetPlate("testAccessPlateByIdentifiersSecond", plateType.getRowId()),
+                new CreatePlateSetPlate("testAccessPlateByIdentifiersThird", plateType.getRowId())
+            ), null);
 
             // Assert
             assertTrue("Expected plateSet to have been persisted and provided with a rowId", plateSet.getRowId() > 0);
@@ -2331,12 +2533,12 @@ public class PlateManager implements PlateService
             assertNotNull(qus);
             BatchValidationException errors = new BatchValidationException();
 
-            // verify metadata update works for Property URI as well as field key
+            // add metadata to 2 rows
             WellBean well = wells.get(0);
             List<Map<String, Object>> rows = List.of(CaseInsensitiveHashMap.of(
                     "rowid", well.getRowId(),
-                    fields.get(0).getPropertyURI(), 1.25,       // concentration
-                    fields.get(1).getPropertyURI(), 5.25            // negativeControl
+                    "properties/concentration", 1.25,
+                    "properties/negativeControl", 5.25
             ));
 
             qus.updateRows(user, container, rows, null, errors, null, null);
@@ -2354,38 +2556,35 @@ public class PlateManager implements PlateService
             if (errors.hasErrors())
                 fail(errors.getMessage());
 
-            // Issue 49603 : getSelectSql not generating correct SQL, uncomment when this issue is fixed
-/*
-
-            ColumnInfo colConcentration = wellTable.getColumn("properties/concentration");
-            ColumnInfo colNegControl = wellTable.getColumn("properties/negativeControl");
+            FieldKey fkConcentration = FieldKey.fromParts("properties", "concentration");
+            FieldKey fkNegativeControl = FieldKey.fromParts("properties", "negativeControl");
+            Map<FieldKey, ColumnInfo> columns = QueryService.get().getColumns(wellTable, List.of(fkConcentration, fkNegativeControl));
 
             // verify plate metadata property updates
-            try (Results r = QueryService.get().select(wellTable, List.of(colConcentration, colNegControl), filter, new Sort("Col")))
+            try (Results r = QueryService.get().select(wellTable, columns.values(), filter, new Sort("Col")))
             {
                 int row = 0;
                 while (r.next())
                 {
                     if (row == 0)
                     {
-                        assertEquals(1.25, r.getDouble(colConcentration.getFieldKey()), 0);
-                        assertEquals(5.25, r.getDouble(colNegControl.getFieldKey()), 0);
+                        assertEquals(1.25, r.getDouble(fkConcentration), 0);
+                        assertEquals(5.25, r.getDouble(fkNegativeControl), 0);
                     }
                     else if (row == 1)
                     {
-                        assertEquals(2.25, r.getDouble(colConcentration.getFieldKey()), 0);
-                        assertEquals(6.25, r.getDouble(colNegControl.getFieldKey()), 0);
+                        assertEquals(2.25, r.getDouble(fkConcentration), 0);
+                        assertEquals(6.25, r.getDouble(fkNegativeControl), 0);
                     }
                     else
                     {
                         // the remainder should be null
-                        assertEquals(0, r.getDouble(colConcentration.getFieldKey()), 0);
-                        assertEquals(0, r.getDouble(colNegControl.getFieldKey()), 0);
+                        assertEquals(0, r.getDouble(fkConcentration), 0);
+                        assertEquals(0, r.getDouble(fkNegativeControl), 0);
                     }
                     row++;
                 }
             }
-*/
         }
 
         @Test
@@ -2411,41 +2610,39 @@ public class PlateManager implements PlateService
             Plate plate = PlateManager.get().createAndSavePlate(container, user, plateType, "hit selection plate", null, null, rows);
             assertEquals("Expected 2 plate custom fields", 2, plate.getCustomFields().size());
 
-            // issue 49603: uncomment when sql generation problem is fixed
-/*
             TableInfo wellTable = QueryService.get().getUserSchema(user, container, PlateSchema.SCHEMA_NAME).getTable(WellTable.NAME);
-            ColumnInfo colConcentration = wellTable.getColumn("properties/concentration");
-            ColumnInfo colBarcode = wellTable.getColumn("properties/barcode");
+            FieldKey fkConcentration = FieldKey.fromParts("properties", "concentration");
+            FieldKey fkBarcode = FieldKey.fromParts("properties", "barcode");
+            Map<FieldKey, ColumnInfo> columns = QueryService.get().getColumns(wellTable, List.of(fkConcentration, fkBarcode));
 
             // verify that well data was added
             SimpleFilter filter = SimpleFilter.createContainerFilter(container);
             filter.addCondition(FieldKey.fromParts("PlateId"), plate.getRowId());
             filter.addCondition(FieldKey.fromParts("Row"), 0);
-            try (Results r = QueryService.get().select(wellTable, List.of(colConcentration, colBarcode), filter, new Sort("Col")))
+            try (Results r = QueryService.get().select(wellTable, columns.values(), filter, new Sort("Col")))
             {
                 int row = 0;
                 while (r.next())
                 {
                     if (row == 0)
                     {
-                        assertEquals(2.25, r.getDouble(colConcentration.getFieldKey()), 0);
-                        assertEquals("B1234", r.getString(colBarcode.getFieldKey()));
+                        assertEquals(2.25, r.getDouble(fkConcentration), 0);
+                        assertEquals("B1234", r.getString(fkBarcode));
                     }
                     else if (row == 1)
                     {
-                        assertEquals(1.25, r.getDouble(colConcentration.getFieldKey()), 0);
-                        assertEquals("B5678", r.getString(colBarcode.getFieldKey()));
+                        assertEquals(1.25, r.getDouble(fkConcentration), 0);
+                        assertEquals("B5678", r.getString(fkBarcode));
                     }
                     else
                     {
                         // the remainder should be null
-                        assertEquals(0, r.getDouble(colConcentration.getFieldKey()), 0);
-                        assertNull(r.getString(colBarcode.getFieldKey()));
+                        assertEquals(0, r.getDouble(fkConcentration), 0);
+                        assertNull(r.getString(fkBarcode));
                     }
                     row++;
                 }
             }
-*/
         }
     }
 }
